@@ -929,7 +929,9 @@ double transformLocation(double location, int unit, SEXP data,
     double result = location;
     switch (unit) {
     case L_NATIVE:
-	// FIXME: can divide by zero
+	/* It is invalid to create a viewport with identical limits on scale
+         * so we are protected from divide-by-zero
+         */
 	result = ((result - scalemin)/(scalemax - scalemin))*thisCM/2.54;
 	break;
     default:
@@ -1033,6 +1035,9 @@ double transformDimension(double dim, int unit, SEXP data,
     double result = dim;
     switch (unit) {
     case L_NATIVE:
+	/* It is invalid to create a viewport with identical limits on scale
+         * so we are protected from divide-by-zero
+         */
 	result = ((dim)/(scalemax - scalemin))*thisCM/2.54;
 	break;
     default:
@@ -1684,14 +1689,26 @@ double transformXYFromINCHES(double location, int unit,
 			     pGEDevDesc dd)
 {
     double result = location;
-    switch (unit) {
-    case L_NATIVE:
-	// FIXME: this can divide by 0
-	result = scalemin + (result/(thisCM/2.54))*(scalemax - scalemin);
-	break;
-    default:
-	result = transformFromINCHES(location, unit, gc,
-				     thisCM, otherCM, dd);
+    /* Special case if "thisCM == 0":
+     * If converting FROM relative unit, result will already be zero 
+     * so leave it there.
+     * If converting FROM absolute unit that is zero, ditto.
+     * Otherwise (converting FROM non-zero absolute unit), 
+     * converting to relative unit is an error.
+     */
+    if ((unit == L_NATIVE || unit == L_NPC) &&
+        thisCM < 1e-6) {
+        if (result != 0)
+            error(_("Viewport has zero dimension(s)"));
+    } else {
+        switch (unit) {
+        case L_NATIVE:
+            result = scalemin + (result/(thisCM/2.54))*(scalemax - scalemin);
+            break;        
+        default:
+            result = transformFromINCHES(location, unit, gc,
+                                         thisCM, otherCM, dd);
+        }
     }
     return result;
 }
@@ -1703,13 +1720,26 @@ double transformWidthHeightFromINCHES(double dimension, int unit,
 				      pGEDevDesc dd)
 {
     double result = dimension;
-    switch (unit) {
-    case L_NATIVE:       
-	result = (result/(thisCM/2.54))*(scalemax - scalemin);
-	break;
-    default:
-	result = transformFromINCHES(dimension, unit, gc,
-				     thisCM, otherCM, dd);
+    /* Special case if "thisCM == 0":
+     * If converting FROM relative unit, result will already be zero 
+     * so leave it there.
+     * If converting FROM absolute unit that is zero, ditto.
+     * Otherwise (converting FROM non-zero absolute unit), 
+     * converting to relative unit is an error.
+     */
+    if ((unit == L_NATIVE || unit == L_NPC) &&
+        thisCM < 1e-6) {
+        if (result != 0)
+            error(_("Viewport has zero dimension(s)"));
+    } else {
+        switch (unit) {
+        case L_NATIVE:       
+            result = (result/(thisCM/2.54))*(scalemax - scalemin);
+            break;
+        default:
+            result = transformFromINCHES(dimension, unit, gc,
+                                         thisCM, otherCM, dd);
+        }
     }
     return result;
 }
